--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Aishwarya Kendle - Portfolio</title>
@@ -56,7 +58,7 @@
       <div>
         <h1 class="section-title">Submit <span>Quote</span></h1>
       </div>
-      <iframe src="http://www.assistance4agency.com/PublicForms/GetQuote" width="100%" height="800px" frameborder="0"></iframe>
+      <iframe src="http://www.assistance4agency.com/PublicForms/GetQuote" width="100%" height="800px" frameborder="0" allow="http:;"></iframe>
     </div>
   </section>
   <!-- End Contact Section -->
